tests/fixtures/guardrails/valid/app/routes/variable-service-import.ts
const target = "~/app/services/health.server";

export async function loader() {
  return import(target);
}
