tests/fixtures/guardrails/invalid/webhook-shadowed-imported-binding-bypass/app/routes/webhooks.app.uninstalled.ts
import { enqueueWebhookInboxEvent } from "~/domain/webhooks/enqueue.server";

void enqueueWebhookInboxEvent;

export async function action(enqueueWebhookInboxEvent) {
  return enqueueWebhookInboxEvent();
}
